# ChangesetMD

./: .gitignore  LICENSE  README.md  changesethandler.py  changesetmd.py  pyproject.toml  queries.py  requirements.txt
.github/: FUNDING.yml
