[tool.poetry]
name = "changesetmd"
version = "0.1.0"
description = ""
authors = ["Nicola Jordan <nic@njo.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
bz2file = "^0.98"
lxml = "^4.8.0"
psycopg2-binary = "^2.9.3"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
2to3 = "^1.0"
blue = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
